--- a/Siri Portfolio/profile.html
+++ b/Siri Portfolio/profile.html
@@ -147,6 +147,11 @@
       <img src="https://seeklogo.com/images/N/netlify-logo-758722CDF4-seeklogo.com.png" alt="Netlify" width="45">
       <p class="mt-1">Netlify</p>
     </div>
+      <div class="flex flex-col items-center text-sm hover:scale-105 transition">
+  <img src="https://cdn-icons-png.flaticon.com/512/11864/11864104.png" alt="ChatGPT" width="45">
+  <p class="mt-1">ChatGPT</p>
+</div>
+
   </div>
 
   <!-- Exploring Now -->
@@ -229,3 +234,4 @@
     </footer>
 </body>
 </html>
+
